# alphafast

./: README.md  pyproject.toml  run_alphafold.py  run_data_pipeline.py
.github/workflows/: docker-publish.yml
benchmarks/: create_mixed_benchmark.py
docker/: Dockerfile
docs/: advanced.md  building.md  hpc.md  input_format.md
modal/: af3_predict.py  config.py  prepare_databases.py  upload_to_hf.py
scripts/: build_rna_mmseqs_dbs.sh  queue_worker.py  run_alphafast.sh  run_multigpu.sh  setup_databases.sh
scripts/benchmarks/: generate_mixed_test_set.sh
src/alphafold3/data/: featurisation.py  msa.py  msa_config.py  pipeline.py  templates.py
src/alphafold3/data/tools/: mmseqs.py  mmseqs_batch.py
src/alphafold3/model/: cyclic_peptide_matrix.py  features.py  inference.py
src/alphafold3/model/network/: featurization.py
src/alphafold3/model/pipeline/: pipeline.py
